# dj-address

./: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
dj_address/: __init__.py
docs/: api.md  installation.md  usage.md
tests/: __init__.py  test_dj_address.py
