[tool]
[tool.poetry]
name = "dj-address"
version = "0.1.0"
homepage = "https://github.com/kiraware/dj-address"
description = "Django Address Field."
authors = ["Kira <kiraware@github.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "dj_address" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.12"

black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
tox = "^4.6.4"
pip  = "^23.2"
mkdocs  = "^1.4.3"
mkdocs-include-markdown-plugin  = "^4.0.4"
mkdocs-material  = "^9.1.19"
mkdocstrings  = {extras = ["python"], version = "^0.22.0"}
mkdocs-material-extensions  = "^1.1.1"
twine  = "^4.0.2"
mkdocs-autorefs = "^0.4.1"
pre-commit = "^3.3.3"
toml = "^0.10.2"
bump2version = "^1.0.1"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
